--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -44,7 +44,7 @@
                                             <label for="Date">Date</label>
                                             <input [(ngModel)]="itemizedDto.date" required="required"
                                             class="form-control" name="date" bsDatepicker
-                                            placeholder="Select Date" class="form-control" name="date"
+                                            placeholder="Select Date" autocomplete="off" class="form-control" name="date"
                                             bsDatepicker 
                                            
                                            >
