--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -31,8 +31,9 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="TaskName"> Account No.</label>
-                                            <input type="text" name="accountNumber" class="form-control"
+                                            <input type="text" name="accountNumber" (focusout)="CheckAccountNumber()" class="form-control"
                                                 [(ngModel)]="accountDto.accountNumber">
+                                                <span style="color:red" *ngIf="isAccountExist">Account Number is already exist.</span>   
                                         </div>
                                     </div>
                                 </div>
