--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -57,8 +57,8 @@
                                                             <div class="form-group category-selector">
                                                                 <label for="Date">Start Date</label>
                                                                 <input [(ngModel)]="amortizationDto.startDate" required="required"
-                                                                class="form-control" name="startDate" bsDatepicker
-                                                                placeholder="Select Date" class="form-control" name="date"
+                                                                class="form-control " name="startDate" bsDatepicker
+                                                                placeholder="Select Date" class="form-control" autocomplete="off" name="date"
                                                                 bsDatepicker  >
                                                             </div>
 
@@ -71,7 +71,7 @@
                                                                 <label for="Date">End Date</label>
                                                                 <input [(ngModel)]="amortizationDto.endDate"  required="required"
                                                                 class="form-control" name="endDate" bsDatepicker
-                                                                placeholder="Select Date" class="form-control" name="date"
+                                                                placeholder="Select Date" class="form-control" autocomplete="off" name="date"
                                                                 bsDatepicker  >
                                                             </div>
 
@@ -84,7 +84,7 @@
                                                             [(ngModel)]="amortizationDto.amount">
                                                         </div>
                                                         <div *ngIf="accumulateAmount" class="col-md-6">
-                                                            <label for="TaskName">Accomulate Amount</label>
+                                                            <label for="TaskName">Accumulate Amount</label>
                                                             <input type="text" name="accomulateAmount" class="form-control"
                                                             [(ngModel)]="amortizationDto.accomulateAmount">
                                                         </div>
