Closing checklist edit scenario

--- a/angular/src/app/admin/management/create-or-edit-timeManagement-modal.component.html
+++ b/angular/src/app/admin/management/create-or-edit-timeManagement-modal.component.html
@@ -15,7 +15,7 @@
 
 								<div class="form-group">
 									<label for="TimeManagement_Month">{{l("SelectMonth")}}</label>
-                                     <input [(ngModel)]="timeManagement.month._d" autocomplete="off"
+                                     <input [(ngModel)]="month" autocomplete="off"
                                      class="form-control" name="date" bsDatepicker
                                      [bsConfig]="{dateInputFormat: 'MMM/YYYY'}"
                                      (onShown)="onOpenCalendar($event)">
