--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -233,7 +233,7 @@
                                     <div class="kt-radio-list eom-radio">
                                         <span></span>
                                         <label class="kt-radio kt-radio--brand" name="radio5">
-                                            <input type="radio" value="true" name="endOn"
+                                            <input type="radio" value="true" name="dueOn"
                                                 (click)="handleRadioChange()" [(ngModel)]="getTaskForEdit.endOfMonth">End of
                                             month
                                             <span></span>
@@ -261,7 +261,7 @@
                     <div class="kt-portlet__head mb-2">
                     </div>
                     <div class="">
-                        <button class="btn btn-brand" (click)="SaveTaskChanges()">
+                        <button class="btn btn-brand" (click)="saveTaskChanges()">
                             Update
                         </button>
                     </div>
