TrialBalanceDownload, Errorlogged in db and file saved on server chartsOfAccounts, and TrialBalance

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -44,7 +44,7 @@
                                     <div class="modal-content">
                                         <div class="modal-body">
                                             <div class="download-modal-row row">
-                                                <div class="col-md-6 text-center" (click)="uploadaccountExcel()">
+                                                <div class="col-md-6 text-center" (click)="downloadTrialBalanceExcelFile()">
                                                     <img src="../../../../assets/img/download.png">
 
 
