--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -59,7 +59,7 @@
                                 <div [ngClass]="{'disabled':!monthStatus}" class="col-md-6">
                                     <div class="form-group">
                                         <label>Assignee</label>
-                                        <app-user-list-component disable = "true" comingChangeReguest="" userId={{assigneeId}}>
+                                        <app-user-list-component  comingChangeReguest="" userId={{assigneeId}}>
                                         </app-user-list-component>
                                     </div>
                                 </div>
@@ -187,14 +187,10 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Status</label>
-                                        <div class="kt-datatable__cell ">
-                                            <button
-                                                class="text-left custom-d-btn btn btn-primary dropdown-toggle drop_down_class"
-                                                type="button" id="dropdownMenu2" data-toggle="dropdown"
-                                                aria-haspopup="true" aria-expanded="false">
-                                                {{getTaskForEdit.status}}
-                                            </button>
-                                        </div>
+                                            <div class="kt-datatable__cell" [ngClass]="{'disabled':!monthStatus}">
+                                                <app-status [TaskId]="0" [StatusList]=getTaskForEdit.status>
+                                                </app-status>
+                                            </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
