--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -90,7 +90,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="row">
-                                                        <div class="col-md-12">
+                                                        <div class="col-md-12 pt-4">
                                                             <div class="form-group">
                                                                 <label for="description">Description</label>
                                                                 <textarea class="form-control" required [(ngModel)]="amortizationDto.description"
