--- a/angular/src/app/main/categories/categories.component.html
+++ b/angular/src/app/main/categories/categories.component.html
@@ -87,7 +87,9 @@
                                         </td>
                                         <td style="width: 20%">
                                             <span class="ui-column-title"> {{'Name' | localize}}</span>
-                                            {{record.description}}
+                                            {{record.description
+                                            ? record.description
+                                            : "N/A"}}
                                         </td>
                                         <td style="width: 20%">
                                             <span class="ui-column-title"> {{'Name' | localize}}</span>
