--- a/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
+++ b/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
@@ -32,7 +32,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="description">Description</label>
-                                    <textarea class="form-control" required [(ngModel)]="categoryobj.description"
+                                    <textarea class="form-control" [(ngModel)]="categoryobj.description"
                                         id="description" name="description" (keydown.enter)="save($event)"
                                          ></textarea>
                                 </div>
