--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -196,7 +196,7 @@
                                         <form class="input-arrow">
                                             <input [disabled]="checklist.frequency==5" [(ngModel)]="checklist.endsOn" required="required"
                                                 autocomplete="off" class="form-control" name="date" bsDatepicker
-                                                placeholder="Month" [minDate]="minDate"
+                                                placeholder="Month"
                                                 [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                                 (onShown)="onOpenCalendar($event)">
                                         </form>
@@ -220,8 +220,9 @@
                     <div class="kt-portlet__head">
                     </div>
                     <div class="btn-create">
-                        <button class="btn btn-brand" (click)="onCreateTask()" [disabled]="taskForm.form.invalid">
-                            {{"Create" | localize}}
+                        <button class="btn btn-brand" (click)="onCreateTask()" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" [disabled]="taskForm.form.invalid">
+                            <i class="fa fa-save"></i>
+                            <span>{{"Create" | localize}}</span>
                         </button>
                     </div>
                    
