Closing monrh check updated

--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -229,7 +229,7 @@
                                     <div class="kt-radio-list eom-radio">
                                         <span></span>
                                         <label class="kt-radio kt-radio--brand" name="radio5">
-                                            <input type="radio" value="true" name="dueOn"
+                                            <input type="radio" name="dueOn"
                                                 (click)="handleRadioChange()" [(ngModel)]="getTaskForEdit.endOfMonth">End of
                                             month
                                             <span></span>
