--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -219,9 +219,11 @@
                                     <div class="form-group">
                                         <label>Ends on</label>
                                         <div class="form-group">
-                                            <form class="">
-                                                <input [(ngModel)]="endsOnDateValue" class="form-control" name="date"
-                                                    bsDatepicker [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
+                                            <form class="input-arrow">
+                                                <input [disabled]="getTaskForEdit.frequencyId==5" [(ngModel)]="endsOnDateValue" required="required"
+                                                    autocomplete="off" class="form-control" name="date" bsDatepicker
+                                                    placeholder="Month" [minDate]="minDate"
+                                                    [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                                     (onShown)="onOpenCalendar($event)">
                                             </form>
                                         </div>
