--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -151,7 +151,7 @@
                                     <ng-template pTemplate="header">
                                         <tr class="task-table-inner">
                                             <th class="date-cell" scope="col" pSortableColumn="ClosingMonth">
-                                                Due Date
+                                                {{'DueDate' | localize}}
                                                 <p-sortIcon field="DueDate"></p-sortIcon>
                                             </th>
                                             <th class="task-cell" scope="col" class="task-task-name">Task Name</th>
