Fixes End of the moth issue and EndsOn issue from edit and creat of Closing CheckList

--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -205,7 +205,7 @@
                                         <span></span>
                                         <label class="kt-radio kt-radio--brand" name="radio5">
                                             <input type="radio" value="true" name="endOfMonth" placeholder="Month"
-                                                (change)="handleRadioChange()" [(ngModel)]="checklist.endOfMonth">{{"Endofmonth" | localize}}
+                                                (click)="handleRadioChange()" [(checked)]="checklist.endOfMonth">{{"Endofmonth" | localize}}
                                             <span></span>
                                         </label>
                                     </div>
