--- a/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
+++ b/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
@@ -41,8 +41,9 @@
                         <div class="kt-portlet__head">
                         </div>
                         <div class="form-group margin-top-5">
-                            <button class="btn btn-brand" type="submit" [disabled]="categoryFormRef.form.invalid">
-                                {{"Save" | localize}}
+                            <button class="btn btn-brand" type="submit" [disabled]="categoryFormRef.form.invalid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
+                                <i class="fa fa-save"></i>
+                                <span>{{"Save" | localize}}</span>
                             </button>
                         </div>
                     </form>
